--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -4,5 +4,5 @@
   <meta name="description" content="{{ page.description }}">
   <meta name="robots" content="index, follow">
   <title>{{ page.title }}</title>
-  <link rel="stylesheet" href="{{ "/styles/global.css" | relative_url }}">
+  <link rel="stylesheet" href="/styles/global.css">
 </head>
