--- a/assets/css/darkmode.css
+++ b/assets/css/darkmode.css
@@ -1,4 +1,4 @@
-/* _darkmode.scss */
+/* darkmode.css */
 body {
   background-color: #121212; /* Dark background */
   color: #e0e0e0; /* Light text color */
@@ -14,21 +14,6 @@ a {
 header, footer {
   background-color: #1f1f1f; /* Slightly lighter dark background for header/footer */
   color: #ffffff; /* White text in header/footer */
-}
-
-nav ul {
-  list-style: none;
-  padding: 0;
-}
-
-nav li {
-  display: inline-block;
-  margin-right: 15px;
-}
-
-nav a {
-  text-decoration: none;
-  color: #BB86FC;
 }
 
 /* Add other dark theme styles for elements here */
