--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,7 @@
   <body>
     <header>
       <h1>{{ site.title }}</h1>
+      <button id="mode-toggle">Toggle Dark Mode</button>
       <nav>
         <ul>
           <li><a href="/">Home</a></li>
@@ -30,5 +31,6 @@
     <footer>
       <p>Copyright © {{ site.time | date: '%Y' }}</p>
     </footer>
+    <script src="/assets/js/darkmode.js"></script>
   </body>
 </html>
