--- a/_sass/_darkmode.scss
+++ b/_sass/_darkmode.scss
@@ -1,28 +1,36 @@
 /* _darkmode.scss */
 body {
-  background-color: #121212; /* Dark background */
-  color: #e0e0e0; /* Light text color */
+  background-color: #333; /* Dark gray background */
+  color: #ffffff;
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
 }
 
 a {
-  color: #BB86FC; /* Light purple link color */
+  color: #BB86FC;
 }
 
-header, footer {
-  background-color: #1f1f1f; /* Slightly lighter dark background for header/footer */
-  color: #ffffff; /* White text in header/footer */
+header,
+footer {
+  background-color: #444;
+  color: #ffffff;
+  padding: 1em;
+}
+
+nav {
+  margin-top: 0.5em;
 }
 
 nav ul {
   list-style: none;
   padding: 0;
+  margin: 0;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 nav li {
-  display: inline-block;
   margin-right: 15px;
 }
 
@@ -31,4 +39,12 @@ nav a {
   color: #BB86FC;
 }
 
-/* Add other dark theme styles for elements here */
+@media (max-width: 600px) {
+  nav ul {
+    flex-direction: column;
+    align-items: center;
+    padding-left: 0;
+  }
+}
+
+/* Additional dark theme styles can be added here */
