--- a/_sass/_darkmode.scss
+++ b/_sass/_darkmode.scss
@@ -1,4 +1,5 @@
 /* _darkmode.scss */
+body {
   background-color: #333; /* Dark gray background */
   color: #ffffff;
   font-family: Arial, sans-serif;
@@ -6,6 +7,31 @@
   padding: 0;
 }
 
+a {
+  color: #BB86FC;
+}
+
+header,
+footer {
+  background-color: #444; /* Slightly lighter dark background for header/footer */
+  color: #ffffff;
+  padding: 1em;
+}
+
+nav ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+nav li {
+  display: inline-block;
+  margin-right: 15px;
+}
+
+nav a {
+  text-decoration: none;
+  color: #BB86FC;
 }
 
 @media (max-width: 600px) {
@@ -14,11 +40,6 @@
     flex-direction: column;
     align-items: center;
     padding-left: 0;
-  }
-
-  #mode-toggle {
-    position: static;
-    margin-top: 10px;
   }
 }
 
