Remove standalone dark mode CSS

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,10 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ page.title }}</title>
 
-    <!-- Link to main stylesheets (if any) -->
+    <!-- Link to main stylesheet -->
     <link rel="stylesheet" href="/assets/css/style.css">
-    <!-- Link to the darkmode stylesheet -->
-    <link rel="stylesheet" href="/assets/css/darkmode.css">
     
   </head>
 
