--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,5 +1,7 @@
-@use 'darkmode';
-@use "jekyll-theme-minimal";
-@use "fonts";
-@use "rouge-github";
-@use "custom";
+---
+---
+
+// Import the default theme so dark styles can override it
+@import "jekyll-theme-minimal";
+@import "darkmode";
+@import "custom";
