Add front matter and update imports

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,5 +1,6 @@
-@use "jekyll-theme-minimal";
-@use 'darkmode';
-@use "fonts";
-@use "rouge-github";
-@use "custom";
+---
+---
+
+@import "jekyll-theme-minimal";
+@import "darkmode";
+@import "custom";
