Add services page and fix header

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,8 +16,10 @@
       <nav>
         <ul>
           <li><a href="/">Home</a></li>
+          <li><a href="/services">Services</a></li>
         </ul>
       </nav>
+      <a href="https://schedule.it-help.tech/" class="cta-button">Book now</a>
     </header>
 
     <main>
