--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -4,6 +4,7 @@ header {
   flex-direction: column;
   align-items: center;
   margin-bottom: 1em;
+  position: relative; /* ensure header does not overlap content */
 }
 
 nav ul {
@@ -12,6 +13,20 @@ nav ul {
 
 nav li {
   margin: 0 0.5em;
+}
+
+main {
+  padding-top: 1em; /* space below the header */
+}
+
+.cta-button {
+  display: inline-block;
+  background-color: #BB86FC;
+  color: #000;
+  padding: 0.5em 1em;
+  border-radius: 4px;
+  text-decoration: none;
+  margin-top: 0.5em;
 }
 
 /* Mode toggle placeholder - ensure no absolute positioning if present */
