--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -3,7 +3,13 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 1em;
+  margin-bottom: 2em; /* add more space below the header */
+  position: relative; /* ensure header does not overlap content */
+}
+
+header h1 {
+  margin: 0;
+  font-size: 1.75em; /* slightly smaller site title */
 }
 
 nav ul {
@@ -12,6 +18,20 @@ nav ul {
 
 nav li {
   margin: 0 0.5em;
+}
+
+main {
+  padding-top: 2em; /* extra space below the header */
+}
+
+.cta-button {
+  display: inline-block;
+  background-color: #BB86FC;
+  color: #000;
+  padding: 0.5em 1em;
+  border-radius: 4px;
+  text-decoration: none;
+  margin-top: 0.5em;
 }
 
 /* Mode toggle placeholder - ensure no absolute positioning if present */
