Fix header layout and use relative URLs

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <title>{{ page.title }}</title>
 
     <!-- Link to main stylesheet -->
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
     
   </head>
 
@@ -15,9 +15,11 @@
       <h1>{{ site.title }}</h1>
       <nav>
         <ul>
-          <li><a href="/">Home</a></li>
+          <li><a href="{{ '/' | relative_url }}">Home</a></li>
+          <li><a href="{{ '/services/' | relative_url }}">Services</a></li>
         </ul>
       </nav>
+      <a href="https://schedule.it-help.tech/" class="cta-button">Book now</a>
     </header>
 
     <main>
