Use Dart Sass module syntax

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,6 +1,6 @@
 ---
 ---
 
-@import "jekyll-theme-minimal";
-@import "darkmode";
-@import "custom";
+@use "jekyll-theme-minimal";
+@use "darkmode";
+@use "custom";
