--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -4,10 +4,13 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  flex-wrap: wrap;
   gap: 1rem;
-  padding-bottom: 1rem;
-  margin-bottom: 1rem;
+  padding-bottom: 2rem;
+  margin-bottom: 2rem;
+}
+
+header h1 {
+  margin: 0;
 }
 
 nav ul {
