--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ page.title }}</title>
+    <title>{{ page.title }} | {{ site.title }}</title>
 
     <!-- Link to main stylesheet -->
     <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <header>
+    <header class="container">
       <h1>{{ site.title }}</h1>
       <nav>
         <ul>
@@ -22,11 +22,11 @@
       <a href="https://schedule.it-help.tech/" class="cta-button">Book now</a>
     </header>
 
-    <main>
+    <main class="container">
       {{ content }}
     </main>
 
-    <footer>
+    <footer class="container">
       <p>Copyright © {{ site.time | date: '%Y' }}</p>
     </footer>
   </body>
