--- a/_sass/_darkmode.scss
+++ b/_sass/_darkmode.scss
@@ -4,20 +4,20 @@
 }
 
 body {
-  background-color: #121212;
-  color: #e0e0e0;
+  background-color: #0d1117; /* Darker background */
+  color: #c9d1d9; /* Lighter text */
   font-family: "Courier New", monospace;
   margin: 0;
   padding: 0;
 }
 
 a {
-  color: #8ab4f8;
+  color: #58a6ff; /* Lighter blue links */
 }
 
 header,
 footer {
-  color: #e0e0e0;
+  color: #c9d1d9;
   padding: 1rem 0;
 }
 
@@ -34,7 +34,7 @@ nav li {
 
 nav a {
   text-decoration: none;
-  color: #8ab4f8;
+  color: #58a6ff;
 }
 
 
@@ -47,4 +47,12 @@ nav a {
   }
 }
 
-/* Additional dark theme styles can be added here */
+/* Add some nerdy ASCII art to the footer */
+footer::before {
+  content: "  /\\_/\\  \A ( o.o ) \A  > ^ <  ";
+  display: block;
+  white-space: pre;
+  text-align: center;
+  margin-bottom: 1rem;
+  color: #8b949e; /* Muted color */
+}
