--- a/_sass/_darkmode.scss
+++ b/_sass/_darkmode.scss
@@ -66,7 +66,7 @@ nav a {
 }
 
 footer::before {
-  content: "     \\ \A      \\\\_ \A     (o o) \A    /===\\\  \A   //| |(\\) \A   '*' '*''"; /* Unicorn ASCII Art */
+  content: "   .-.   \A  (o.o)  \A  |\\_/|  \A //`_`\\\\ \A_\\_/_\\_"; /* Owl of Athena ASCII Art */
   display: block;
   white-space: pre;
   text-align: center;
