--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,11 +15,7 @@
         "publisher": {
           "@type": "Organization",
           "name": "IT Help San Diego Inc.",
-          "url": "https://it-help.tech",
-          "logo": {
-            "@type": "ImageObject",
-            "url": "https://it-help.tech/logo.png" 
-          }
+          "url": "https://it-help.tech"
         }
       }
       </script>
@@ -31,6 +27,7 @@
         <ul>
           <li><a href="{{ '/' | relative_url }}">Home 🏠</a></li>
           <li><a href="{{ '/services.html' | relative_url }}">Services 🛠️</a></li>
+          <li><a href="{{ '/billing.html' | relative_url }}">Billing 💰</a></li>
         </ul>
       </nav>
       <a href="https://schedule.it-help.tech/" class="cta-button">Book Now 📅</a>
