--- a/_sass/_darkmode.scss
+++ b/_sass/_darkmode.scss
@@ -89,6 +89,12 @@ footer::before {
   font-weight: bold;
 }
 
+/* Style for the ethics statement */
+.ethics-statement {
+  color: #8ab4f8; /* Use the bright blue for emphasis */
+  font-weight: bold;
+}
+
 /* Style for the final tagline */
 .final-tagline {
   font-size: 1.2em; /* Make it slightly larger */
