--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,7 +62,7 @@
     }
     </script>
 
-    </head>
+  </head>
 
   <body>
     <header class="container">
@@ -83,6 +83,7 @@
 
     <footer class="container">
       <p>&copy; {{ site.time | date: '%Y' }} {{ site.title }}. A service by <a href="https://it-help.tech">IT Help San Diego Inc.</a></p>
+      <p class="footer-brag">✨ Lightweight, no trackers, no cookies. Just fast, nerdy help. ✨</p>
     </footer>
   </body>
 </html>
