--- a/_sass/_darkmode.scss
+++ b/_sass/_darkmode.scss
@@ -16,7 +16,7 @@ a {
 }
 
 h1 {
- color: #228B22; /* New Deep Forest Green */
+ color: #3CB371; /* New Unified Classy Green */
 }
 
 h2 {
@@ -99,8 +99,8 @@ footer::before {
 .final-tagline {
   font-size: 1.2em; /* Make it slightly larger */
   font-weight: bold;
-  color: #39d353; /* Use a vibrant green */
+  color: #3CB371; /* New Unified Classy Green */
   text-transform: uppercase;
   margin-top: 2rem; /* Add some space above it */
-  text-shadow: 0 0 5px rgba(57, 211, 83, 0.5); /* Add a subtle glow */
+  /* text-shadow: 0 0 5px rgba(60, 179, 113, 0.5); */ /* Removing shadow for a cleaner look */
 }
