--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -62,7 +62,7 @@ footer p {
 
 .cta-button {
   display: inline-block;
-  background-color: #3CB371; /* New Unified Classy Green */
+  background-color: #2EA043; /* NEW Unified High-Tech Green */
   color: #fff; /* Keep text white for contrast */
   padding: 0.5em 1em;
   border-radius: 4px;
@@ -72,7 +72,7 @@ footer p {
 }
 
 .cta-button:hover {
-  background-color: #46a070; /* Slightly darker/desaturated green for hover */
+  background-color: #238636; /* Slightly darker green for hover */
 }
 
 @media (max-width: 600px) {
