--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -78,7 +78,7 @@
           <li><a href="{{ '/billing.html' | relative_url }}">Rates & Billing 💰</a></li>
         </ul>
       </nav>
-      <a href="https://schedule.it-help.tech/" class="cta-button">Book Now 📅</a>
+      <a href="https://schedule.it-help.tech/" class="cta-button">Book Now<span class="button-icon"> 📅</span></a>
     </header>
 
     <main class="container">
