--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -110,7 +110,7 @@ footer p {
 
   .cta-button {
     align-self: center; 
-    left: -6px; /* Nudge button 6px to the left */
+    left: -8px; /* Nudge button 8px to the left (Lucky Number!) */
   }
 
   .button-icon {
