--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -76,6 +76,7 @@
           <li><a href="{{ '/' | relative_url }}">Home 🏠</a></li>
           <li><a href="{{ '/services.html' | relative_url }}">Services 🛠️</a></li>
           <li><a href="{{ '/billing.html' | relative_url }}">Rates & Billing 💰</a></li>
+          <li><a href="{{ '/blog.html' | relative_url }}">Blog ✍️</a></li>
         </ul>
       </nav>
       <a href="https://schedule.it-help.tech/" class="cta-button">Book Now<span class="button-icon"> 📅</span></a>
